# rustdesk-server

./: .gitmodules  audit.toml  workflow-config-guide.md
.cargo/: config.toml
commercial/: .env.example  Cargo.toml  audit.toml  openapi.json  start-local.bat
commercial/.github/workflows/: cd.yml  ci.yml
commercial/data/: rustdesk_pro.db
commercial/docker/: .dockerignore  CONTAINER_ENGINE_ANALYSIS.md  DOCKER.md  Dockerfile  Dockerfile.extended  Dockerfile.gha  Dockerfile.local  Dockerfile.s6  Dockerfile.simple  Dockerfile.windows  README.md  docker-compose.gha.yml  docker-compose.local.yml  docker-compose.yml  nginx.conf  podman-compose.yml
commercial/docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENT_CONTROL.md  FEATURES.md  PODMAN_DEPLOYMENT.md  USAGE.md  USER_MANUAL.md
commercial/monitoring/: docker-compose.monitoring.yml  grafana-dashboard.json  prometheus.yml
commercial/scripts/: init_db.sql
commercial/src/: cache.rs  lib.rs  main.rs  metrics.rs
commercial/src/audit/: errors.rs  logger.rs  mod.rs  models.rs
commercial/src/db/: mod.rs
commercial/src/device/: errors.rs  manager.rs  mod.rs  models.rs
commercial/src/license/: errors.rs  manager.rs  mod.rs  models.rs  tests.rs
commercial/src/user/: errors.rs  manager.rs  mod.rs  models.rs
commercial/src/web/: handlers.rs  middleware.rs  mod.rs  routes.rs
commercial/tests/benchmark/: benchmark.py
commercial/tests/k6/: load_test.js
docs/: README.md  deploy-binary.md  deploy-docker-compose.md  deploy-docker.md  (+7 more)
(+20 files in other folders)
