[workspace]

[package]
name = "rustdesk-server-pro"
version = "1.0.0"
authors = ["RustDesk Team <info@rustdesk.com>"]
edition = "2021"
description = "RustDesk Server Commercial Edition - Enterprise Remote Control Solution"
license = "Proprietary"

[[bin]]
name = "rustdesk-pro"
path = "src/main.rs"

[dependencies]
# Common utilities from community edition
hbb_common = { path = "../libs/hbb_common" }

# Web framework
axum = { version = "0.5", features = ["headers"] }
headers = "0.3"

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "json"] }
deadpool = "0.8"

# Authentication
jsonwebtoken = "8"
bcrypt = "0.13"

# Cryptography
sodiumoxide = "0.2"
uuid = { version = "1.0", features = ["v4"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
flexi_logger = { version = "0.22", features = ["async"] }
log = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# CLI
clap = "2"

# Cross-origin resource sharing
tower-http = { version = "0.3", features = ["cors"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Base64 encoding
base64 = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tokio-test = "0.4"
mockall = "0.12"
